# LLMfactory

./: .gitignore  PLAN.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
cleaning-system/: pyproject.toml
cleaning-system/cleaning_system/: __init__.py  api.py  cli.py
cleaning-system/cleaning_system/core/: errors.py  models.py  pipeline.py
cleaning-system/cleaning_system/infra/: config.py  logging.py
cleaning-system/cleaning_system/stages/: gopher.py  lang_filter.py  near_dedup.py  perplexity.py  relevance.py  trafilatura_fix.py
cleaning-system/tests/: conftest.py
cleaning-system/tests/integration/: test_full_run.py
cleaning-system/tests/unit/: test_gopher.py  test_lang_filter.py  test_near_dedup.py  test_perplexity.py  test_pipeline.py  test_relevance.py  test_trafilatura_fix.py
collection-system/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
collection-system/collection_system/: __init__.py  api.py  bootstrap.py  cli.py
collection-system/collection_system/adapters/llm/: cerebras_adapter.py  failover_adapter.py  groq_adapter.py  ollama_adapter.py  openai_adapter.py
collection-system/collection_system/adapters/scraper/: crawl4ai_adapter.py  curl_cffi_fallback.py  httpx_fallback.py  resilient.py
collection-system/collection_system/adapters/search/: base.py  blocklist.py  cc_cdx.py  composite.py  ddg_lite.py  searxng.py
collection-system/collection_system/adapters/storage/: filesystem.py  orm.py  postgres.py
collection-system/collection_system/agents/: graph.py  nodes.py  prompts.py  state.py
collection-system/collection_system/core/: constants.py  errors.py  events.py  models.py  pipeline.py  ports.py
collection-system/collection_system/infra/: checkpoint.py  circuit_breaker.py  config.py  db.py  logging.py  metrics.py  rate_limiter.py  retry.py
collection-system/configs/: default.toml  dev.toml  prod.toml
collection-system/docker/: docker-compose.yml
collection-system/docker/loki/: loki-config.yml
collection-system/docker/prometheus/: prometheus.yml
collection-system/docker/promtail/: promtail-config.yml
collection-system/docker/searxng/: limiter.toml  settings.yml
collection-system/migrations/: env.py
collection-system/migrations/versions/: 0001_initial_schema.py  0002_relax_fks.py
collection-system/tests/: conftest.py
collection-system/tests/golden/: test_devops_queries.py
collection-system/tests/integration/: test_cc_cdx.py  test_crawl4ai.py  test_postgres.py  test_searxng.py
collection-system/tests/unit/: test_bootstrap_db.py  test_bootstrap_llm.py  test_cc_cdx_scoring.py  test_composite.py  test_models.py  test_pipeline.py  test_query_agent.py  test_rate_limiter.py  test_resilient_scraper.py  test_scrape_fallback.py  test_search_base.py
dataset-forge/: pyproject.toml
dataset-forge/dataset_forge/: __init__.py  api.py  cli.py
dataset-forge/dataset_forge/adapters/llm/: groq_adapter.py
dataset-forge/dataset_forge/adapters/vector/: lancedb_adapter.py
dataset-forge/dataset_forge/core/: errors.py  models.py  pipeline.py
dataset-forge/dataset_forge/infra/: config.py  logging.py
dataset-forge/dataset_forge/stages/: chunk.py  embed.py  qa_synth.py  split.py
dataset-forge/tests/: conftest.py
dataset-forge/tests/unit/: test_chunk.py  test_embed.py  test_pipeline.py  test_qa_synth.py  test_split.py
orchestrator/: pyproject.toml
orchestrator/orchestrator/: __init__.py  app.py  cli.py  events.py  log_bridge.py  runner.py
orchestrator/orchestrator/static/: app.js  index.html  style.css
orchestrator/tests/: test_app.py  test_runner.py
searxng/: settings.yml
tests/e2e/: test_pipeline.py
trainer-service/: pyproject.toml
trainer-service/tests/: conftest.py
trainer-service/tests/integration/: test_modal_smoke.py
trainer-service/tests/unit/: test_budget.py  test_pipeline.py  test_runner_helpers.py  test_s3_adapter.py
trainer-service/trainer_service/: __init__.py  api.py  cli.py
trainer-service/trainer_service/adapters/compute/: modal_adapter.py
trainer-service/trainer_service/adapters/storage/: s3_adapter.py
trainer-service/trainer_service/core/: errors.py  models.py  pipeline.py
trainer-service/trainer_service/infra/: budget.py  config.py
trainer-service/trainer_service/training/: modal_app.py  runner.py
