[project]
name = "cleaning-system"
version = "0.1.0"
description = "7-stage corpus cleaning pipeline for LLM fine-tuning datasets"
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "typer==0.24.1",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "datasketch==1.9.0",
    "langdetect==1.0.9",
    "trafilatura==2.0.0",
    "torch>=2.4,<3",
    "transformers>=4.45,<5",
    "sentence-transformers>=3.3,<4",
    "numpy>=2.1",
    "scipy>=1.14",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "mypy==1.20.1",
]

[project.scripts]
clean = "cleaning_system.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring live services or model downloads",
]
