[project]
name = "orchestrator"
version = "0.1.0"
description = "FastAPI orchestrator — chains collection → cleaning → dataset-forge with SSE progress"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]>=0.32,<1",
    "sse-starlette>=2.1,<3",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "typer==0.24.1",
    "httpx==0.28.1",
    "collection-system",
    "cleaning-system",
    "dataset-forge",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "mypy==1.20.1",
]

[project.scripts]
orchestrate = "orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
collection-system = { path = "../collection-system", editable = true }
cleaning-system = { path = "../cleaning-system", editable = true }
dataset-forge = { path = "../dataset-forge", editable = true }

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: hits live collection/cleaning/forge pipelines"]
