[project]
name = "trainer-service"
version = "0.1.0"
description = "Modal-hosted Unsloth QLoRA trainer — dataset JSONL to merged GGUF int4, S3 upload"
requires-python = ">=3.13"

dependencies = [
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "typer==0.24.1",
    "httpx==0.28.1",
    "structlog==25.5.0",
    "tenacity==9.1.4",
    "modal>=1.0,<2",
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "mypy==1.20.1",
    "moto[s3]>=5.0,<6",
]

[project.scripts]
trainer = "trainer_service.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring Modal + S3 credentials",
]
